fixed layout bug with zindex

--- a/frontend/src/app/app.component.css
+++ b/frontend/src/app/app.component.css
@@ -3,11 +3,14 @@
   left: 0px;
   top: 0px;
   width: 100%;
+  z-index:1;
 }
 
 .body {
   margin-top: 64px;
-  height: calc(100vh - 64px);
+  height: calc(100vh - 96px);
+  margin-bottom: 0;
+  z-index:2;
 }
 
 .footer {
